[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/character_selector.gd" id="1"]

[node name="CharacterSelector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose Your Character"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CharacterName" type="Label" parent="VBox"]
layout_mode = 2
text = "Juan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Description" type="Label" parent="VBox"]
layout_mode = 2
text = "Balanced fighter with standard abilities"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Stats" type="Label" parent="VBox"]
layout_mode = 2
text = "Stats:
Speed: 100
Health: 100
Attack: 20
Special: None"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="PrevButton" type="Button" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "< Previous"

[node name="NextButton" type="Button" parent="VBox/HBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next >"

[node name="SelectButton" type="Button" parent="VBox"]
layout_mode = 2
text = "Select Character"
